Fixed spacing issue for mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -25,12 +25,28 @@ h3{
     font-weight: 500;
 }
 
-@media only screen and (max-width: 600px) {
+.ButtonText{
+    font-family: Rubik;
+    margin: auto;
+    font-weight: 60;
+}
+
+@media only screen and (max-width: 900px) {
     .BannerLogo{
-        width: 90%;
+        width: 85%;
         transition: 1s;
     }
     h3 {
         font-size: 2vw;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .BannerLogo{
+        width: 100%;
+        transition: 1s;
+    }
+    h3 {
+        font-size: 4vw;
     }
 }
